[#noissue] Refactor HyperLinkFactory dependencies